added apikey-based authentication

--- a/src/LumeHub.Api/appsettings.json
+++ b/src/LumeHub.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiKeySettings": {
+    "ApiKey": "MySecretApiKey",
+    "ApiKeyHeaderName": "x-api-key",
+    "ApiKeySchemeName": "ApiKey"
+  }
 }
