--- a/src/LumeHub.Api/LumeHub.Api.csproj
+++ b/src/LumeHub.Api/LumeHub.Api.csproj
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ApiLocksmith.Core" Version="1.0.0" />
+    <PackageReference Include="ApiLocksmith.Swagger.FastEndpoints" Version="1.0.0" />
     <PackageReference Include="FastEndpoints" Version="5.20.1" />
-    <PackageReference Include="FastEndpoints.Security" Version="5.20.1" />
     <PackageReference Include="FastEndpoints.Swagger" Version="5.20.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
