--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -12,6 +12,8 @@ jobs:
         steps:
           - name: Checkout repository
             uses: actions/checkout@v3
+            with:
+                submodules: 'true'
           - name: Setup .NET Core SDK
             uses: actions/setup-dotnet@v3
             with:
