--- a/src/LumeHub.Api/appsettings.json
+++ b/src/LumeHub.Api/appsettings.json
@@ -10,5 +10,10 @@
     "ApiKey": "MySecretApiKey",
     "ApiKeyHeaderName": "x-api-key",
     "ApiKeySchemeName": "ApiKey"
+  },
+  "LedControllerSettings": {
+    "PixelCount": 100,
+    "BusId": 0,
+    "ClockFrequency": 2000000
   }
 }
