--- a/src/LumeHub.Api/LumeHub.Api.csproj
+++ b/src/LumeHub.Api/LumeHub.Api.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="ApiLocksmith.Swagger.FastEndpoints" Version="1.0.0" />
     <PackageReference Include="FastEndpoints" Version="5.20.1" />
     <PackageReference Include="FastEndpoints.Swagger" Version="5.20.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
