--- a/src/LumeHub.Api/appsettings.json
+++ b/src/LumeHub.Api/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseFileName" : "LumeHub.Api.db" 
+  },
   "ApiKeySettings": {
     "ApiKey": "MySecretApiKey",
     "ApiKeyHeaderName": "x-api-key",
