renamed LumeHub.Api to LumeHub.Server

--- a/tests/UnitTests/UnitTests.csproj
+++ b/tests/UnitTests/UnitTests.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\LumeHub.Api\LumeHub.Api.csproj" />
+    <ProjectReference Include="..\..\src\LumeHub.Server\LumeHub.Server.csproj" />
   </ItemGroup>
 
 </Project>
